--- a/article.html
+++ b/article.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../fontawesome/css/all.css">
+  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Lato|Staatliches&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../Sport website/css/style.css">
+  <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" media="screen and (max-width:768px)" href="./css/mobile.css">
   
   <title>NewsGrid/Article</title>
